# Supybot-plugins

./: .editorconfig  .gitignore  AGENTS.md  README  README.md  WikiTrans
AnnouncePic/: README.txt  __init__.py  config.py  plugin.py  test.py
AtB/: README  README.md  README.txt  __init__.py  config.py  plugin.py  pyproject.toml  test.py
AutoOp/: README.md  README.txt  __init__.py  config.py  plugin.py  pyproject.toml  test.py
AutoOp/locales/: en.po
BadeTemp/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  test.py
BadeTemp/locales/: en.po  no.po
Badetemperatur/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  test.py
Badetemperatur/locales/: en.po  no.po
Corona/: README.md  __init__.py  config.py  plugin.py  test.py
Diablo/: README.txt  __init__.py  plugin.py
DuckDuckGo/: README  README.md  README.txt  __init__.py  config.py  plugin.py  pyproject.toml  test.py
DuckDuckGo/locales/: en.po
FacebookImage/: README  README.txt  __init__.py  config.py  plugin.py  test.py
Fotball/: README.md  __init__.py  config.py  plugin.py  setup.py  test.py
Get/: __init__.py  config.py  plugin.py  test.py
GodtNo/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  test.py
GodtNo/locales/: en.po
Gulesider/: __init__.py  plugin.py  pyproject.toml  test.py
Hailo/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  test.py
ImgGet/: README  README.txt  __init__.py  __init__.py~  config.py  config.py~  plugin.py  plugin.py~  pyproject.toml  test.py
ImgGet/locales/: en.po
IsSteamDown/: __init__.py  test.py
Kommune/: README.md  __init__.py  config.py  kommuner.json  kommuner_2016-06.json  plugin.py  pyproject.toml  test.py
Kommune/locales/: en.po
LastFM/: README  README.md  README.txt  __init__.py  apisettings.py  config.py  plugin.py  pylast.py  pyproject.toml  test.py
LastFM/locales/: en.po
Markov/: plugin.py
Mistral/: PLAN.md  README.md  __init__.py  config.py  plugin.py  pyproject.toml  requirements.txt  setup.py  test.py
Mistral/locales/: en.po
Mistral/prompts/: large_channel.txt  small_channel.txt
NTNUCourses/: README  README.md  README.txt  __init__.py  plugin.py
Navnedag/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  test.py
Navnedag/locales/: en.po
NorwegianFootball/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  test.py
NorwegianFootball/locales/: en.po
OMDb/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  test.py
OMDb/locales/: en.po
Olympics/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  test.py
Olympics/locales/: en.po
PasswordTester/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  test.py
PasswordTester/locales/: en.po
Patdown/: README  README.txt  __init__.py  plugin.py  test.py
RioMedals/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  test.py
RottenTomatoes/: README.txt  __init__.py  plugin.py  pyproject.toml
RulesOfAcquisition/: README.md  README.txt  __init__.py  config.py  plugin.py  pyproject.toml  test.py
RulesOfAcquisition/locales/: en.po
Ruter/: __init__.py  config.py  plugin.py  test.py
SSB/: README.md  README.txt  __init__.py  config.py  plugin.py  pyproject.toml  test.py
SSB/locales/: en.po  no.po
SWTOR/: README.md  README.txt  __init__.py  plugin.py
Series/: README  README.md  README.txt  __init__.py  config.py  plugin.py  pyproject.toml  test.py
Series/locales/: en.po
Spotify/: README  README.txt  __init__.py  config.py  plugin.py  test.py
SpotifyLookup/: README.txt  __init__.py  config.py  plugin.py  test.py
SupySnap/: LICENCE-PYSNAP  __init__.py  config.py  plugin.py  pysnap.py
Timer/: __init__.py  config.py  plugin.py  test.py
TraktTV/: README.md  README.txt  __init__.py  config.py  plugin.py  pyproject.toml  test.py
TraktTV/locales/: en.po
Tweety/: __init__.py  config.py  plugin.py
Twitter/: README  README.md  README.txt  __init__.py  config.py  plugin.py  test.py
UrlShortener/: README.md  README.txt  __init__.py  config.py  plugin.py  pyproject.toml  test.py
UrlShortener/locales/: en.po
WTFSIMFD/: README  README.md  README.txt  __init__.py  config.py  plugin.py  pyproject.toml  test.py
WTFSIMFD/locales/: en.po
Week/: __init__.py  config.py  plugin.py  pyproject.toml  test.py
Week/locales/: en.po
Wolfram/: README  README.md  README.txt  __init__.py  config.py  plugin.py  pyproject.toml  test.py
Wolfram/locales/: en.po
Yr/: README  README.md  README.txt  __init__.py  config.py  noreg.txt  plugin.py  postnummer.txt  pyproject.toml  test.py
Yr/locales/: en.po  no.po
dead-plugins/BattleNet/: README.md  __init__.py  config.py  plugin.py  pyproject.toml  test.py
dead-plugins/Diablo/: __init__.py  config.py  plugin.py  pyproject.toml  test.py
dead-plugins/FacebookImage/: __init__.py  plugin.py  pyproject.toml
dead-plugins/Gulesider/: README.md  __init__.py  config.py
dead-plugins/Gulesider/locales/: en.po  no.po
dead-plugins/Hailo/: __init__.py  config.py  plugin.py  test.py
dead-plugins/Hailo/locales/: en.po
dead-plugins/IsSteamDown/: __init__.py  config.py  plugin.py  pyproject.toml
dead-plugins/NTNUCourses/: README.txt  __init__.py  config.py  pyproject.toml  test.py
dead-plugins/Patdown/: README.txt  __init__.py  config.py  plugin.py  pyproject.toml
dead-plugins/RottenTomatoes/: __init__.py  config.py  test.py
dead-plugins/Ruter/: __init__.py  plugin.py  pyproject.toml
dead-plugins/SWTOR/: __init__.py  config.py  plugin.py  pyproject.toml  test.py
dead-plugins/Spotify/: pyproject.toml
dead-plugins/SupySnap/: __init__.py  config.py  plugin.py  pyproject.toml  test.py
dead-plugins/Timer/: README.md  pyproject.toml
hLastFM/: README.txt  config.py  plugin.py
hoaas-LastFM/: __init__.py  test.py
selfmade-LastFM/: config.py  plugin.py
yr/: README.txt  __init__.py  config.py  plugin.py  plugin.py.2010-10-26.backup  plugin.py~  test.py
