[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-autoop"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
AutoOp = "limnoria_autoop"

[tool.setuptools.package-dir]
"limnoria_autoop" = "."

[tool.setuptools.package-data]
"limnoria_autoop" = ["locales/*.po"]
