[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-badetemp"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
BadeTemp = "limnoria_badetemp"

[tool.setuptools.package-dir]
"limnoria_badetemp" = "."

[tool.setuptools.package-data]
"limnoria_badetemp" = ["locales/*.po"]
