[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-badetemperatur"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Badetemperatur = "limnoria_badetemperatur"

[tool.setuptools.package-dir]
"limnoria_badetemperatur" = "."

[tool.setuptools.package-data]
"limnoria_badetemperatur" = ["locales/*.po"]
