[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-duckduckgo"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
DuckDuckGo = "limnoria_duckduckgo"

[tool.setuptools.package-dir]
"limnoria_duckduckgo" = "."

[tool.setuptools.package-data]
"limnoria_duckduckgo" = ["locales/*.po"]
