[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-godtno"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
GodtNo = "limnoria_godtno"

[tool.setuptools.package-dir]
"limnoria_godtno" = "."

[tool.setuptools.package-data]
"limnoria_godtno" = ["locales/*.po"]
