[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-gulesider"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Gulesider = "limnoria_gulesider"

[tool.setuptools.package-dir]
"limnoria_gulesider" = "."

[tool.setuptools.package-data]
"limnoria_gulesider" = ["locales/*.po"]
