[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-hailo"
version = "0.0.0"
authors = [
    { name = "2006 Tom Morton, Sebastien Dailly" },
    { name = "Nicolas Coevoet" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Hailo = "limnoria_hailo"

[tool.setuptools.package-dir]
"limnoria_hailo" = "."

[tool.setuptools.package-data]
"limnoria_hailo" = ["locales/*.po"]
