[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-kommune"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Kommune = "limnoria_kommune"

[tool.setuptools.package-dir]
"limnoria_kommune" = "."

[tool.setuptools.package-data]
"limnoria_kommune" = ["locales/*.po"]
