[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-lastfm"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
LastFM = "limnoria_lastfm"

[tool.setuptools.package-dir]
"limnoria_lastfm" = "."

[tool.setuptools.package-data]
"limnoria_lastfm" = ["locales/*.po"]
