[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-navnedag"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Navnedag = "limnoria_navnedag"

[tool.setuptools.package-dir]
"limnoria_navnedag" = "."

[tool.setuptools.package-data]
"limnoria_navnedag" = ["locales/*.po"]
