[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-omdb"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
OMDb = "limnoria_omdb"

[tool.setuptools.package-dir]
"limnoria_omdb" = "."

[tool.setuptools.package-data]
"limnoria_omdb" = ["locales/*.po"]
