[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-passwordtester"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
PasswordTester = "limnoria_passwordtester"

[tool.setuptools.package-dir]
"limnoria_passwordtester" = "."

[tool.setuptools.package-data]
"limnoria_passwordtester" = ["locales/*.po"]
