[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-rulesofacquisition"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
RulesOfAcquisition = "limnoria_rulesofacquisition"

[tool.setuptools.package-dir]
"limnoria_rulesofacquisition" = "."

[tool.setuptools.package-data]
"limnoria_rulesofacquisition" = ["locales/*.po"]
