[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-series"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Series = "limnoria_series"

[tool.setuptools.package-dir]
"limnoria_series" = "."

[tool.setuptools.package-data]
"limnoria_series" = ["locales/*.po"]
