[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-trakttv"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
TraktTV = "limnoria_trakttv"

[tool.setuptools.package-dir]
"limnoria_trakttv" = "."

[tool.setuptools.package-data]
"limnoria_trakttv" = ["locales/*.po"]
