[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-wtfsimfd"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
WTFSIMFD = "limnoria_wtfsimfd"

[tool.setuptools.package-dir]
"limnoria_wtfsimfd" = "."

[tool.setuptools.package-data]
"limnoria_wtfsimfd" = ["locales/*.po"]
