[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-week"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Week = "limnoria_week"

[tool.setuptools.package-dir]
"limnoria_week" = "."

[tool.setuptools.package-data]
"limnoria_week" = ["locales/*.po"]
