[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-wolfram"
version = "0.1"
authors = []
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Wolfram = "limnoria_wolfram"

[tool.setuptools.package-dir]
"limnoria_wolfram" = "."

[tool.setuptools.package-data]
"limnoria_wolfram" = ["locales/*.po"]
