[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-battlenet"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
BattleNet = "limnoria_battlenet"

[tool.setuptools.package-dir]
"limnoria_battlenet" = "."

[tool.setuptools.package-data]
"limnoria_battlenet" = ["locales/*.po"]
