[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-facebookimage"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
FacebookImage = "limnoria_facebookimage"

[tool.setuptools.package-dir]
"limnoria_facebookimage" = "."

[tool.setuptools.package-data]
"limnoria_facebookimage" = ["locales/*.po"]
