[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-patdown"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Patdown = "limnoria_patdown"

[tool.setuptools.package-dir]
"limnoria_patdown" = "."

[tool.setuptools.package-data]
"limnoria_patdown" = ["locales/*.po"]
