[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-ruter"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Ruter = "limnoria_ruter"

[tool.setuptools.package-dir]
"limnoria_ruter" = "."

[tool.setuptools.package-data]
"limnoria_ruter" = ["locales/*.po"]
