[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-swtor"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
SWTOR = "limnoria_swtor"

[tool.setuptools.package-dir]
"limnoria_swtor" = "."

[tool.setuptools.package-data]
"limnoria_swtor" = ["locales/*.po"]
