[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-spotify"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Spotify = "limnoria_spotify"

[tool.setuptools.package-dir]
"limnoria_spotify" = "."

[tool.setuptools.package-data]
"limnoria_spotify" = ["locales/*.po"]
