[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-supysnap"
version = "0.0.0"
authors = [
    { name = "Terje Hoås" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
SupySnap = "limnoria_supysnap"

[tool.setuptools.package-dir]
"limnoria_supysnap" = "."

[tool.setuptools.package-data]
"limnoria_supysnap" = ["locales/*.po"]
